--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMULjPeGhzAoHftzKHAsYrn",
+      "authorship_tag": "ABX9TyOadaDbc5YfOR9sOR3/mlXs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,8 +195,22 @@
         "    return block\n",
         "\n",
         "  def insert(self, data, pos):\n",
-        "    # \n",
-        "    pass\n",
+        "    # if block chain is empty, just add it irrespective of position\n",
+        "    if self.size() == 0:\n",
+        "      self.append(data)\n",
+        "      return\n",
+        "\n",
+        "    # if pos is 1, then its the begining, so prepend it\n",
+        "    if pos == 1:\n",
+        "      self.prepend(data)\n",
+        "      return\n",
+        "\n",
+        "    # if position is greater than the size of the BlockChain, add it to the end\n",
+        "    if pos > self.size():\n",
+        "      self.append(data)\n",
+        "      return\n",
+        "\n",
+        "    # now for fun?\n",
         "\n",
         "  def size(self):\n",
         "    return len(self.blocks)"
