--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOadaDbc5YfOR9sOR3/mlXs",
+      "authorship_tag": "ABX9TyOtHceNUhi72DR0LherU+n/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,8 +85,7 @@
         "  def __init__(self):\n",
         "    self.blocks = []\n",
         "    self.head = None\n",
-        "    self.tail = None\n",
-        "\n",
+        "    \n",
         "  def calc_hash(self, data):\n",
         "    sha = hashlib.sha256()\n",
         "    sha.update(data.encode('utf-8'))\n",
@@ -96,12 +95,11 @@
         "    # Create a new block\n",
         "    data_hash = self.calc_hash(data)\n",
         "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
-        "    self.blocks.append(new_block)\n",
+        "    self.blocks.insert(0, new_block)\n",
         "\n",
         "    if self.head is None:\n",
-        "      # If no head, that would mean no tail, assign both to new block and return\n",
+        "      # If no head, that would mean its an empty BlockChain\n",
         "      self.head = new_block\n",
-        "      self.tail = new_block\n",
         "      return\n",
         "    \n",
         "    # Assign the new blocks hash to the previous hash of the head and move head to the new block\n",
@@ -117,13 +115,10 @@
         "    if self.head is None:\n",
         "      # If no head, that would mean no tail, assign both to new block and return\n",
         "      self.head = new_block\n",
-        "      self.tail = new_block\n",
         "      return\n",
         "\n",
         "    # Assign the hash from the tail to the new blocks previous hash, move the tail to the new block\n",
-        "    new_block.previous_hash = self.tail.hash\n",
-        "    self.tail = new_block\n",
-        "\n",
+        "    new_block.previous_hash = self.calc_hash(self.blocks[-1].data)\n",
         "\n",
         "  def search(self, data):\n",
         "    # Run through the list to find the block object\n",
@@ -210,7 +205,20 @@
         "      self.append(data)\n",
         "      return\n",
         "\n",
-        "    # now for fun?\n",
+        "    # Create a new block\n",
+        "    data_hash = self.calc_hash(data)\n",
+        "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
+        "\n",
+        "    # Get the block from the list for that position and the previous one\n",
+        "    next_block = self.blocks[pos-1]\n",
+        "    prev_block = self.blocks[pos-2]\n",
+        "\n",
+        "    # assign the has correctly\n",
+        "    new_block.previous_hash = next_block.previous_hash\n",
+        "    next_block.previous_hash = data_hash\n",
+        "    \n",
+        "    # insert new block into the list\n",
+        "    self.blocks.insert(pos-1, new_block)\n",
         "\n",
         "  def size(self):\n",
         "    return len(self.blocks)"
@@ -244,24 +252,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4a289add-1676-45e6-d259-b76bd393a0c5"
+        "outputId": "af6af976-9878-4295-cec2-abbaddc70da9"
       },
       "source": [
         "bc.size()"
       ],
-      "execution_count": 90,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "4"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 90
+          "execution_count": 131
         }
       ]
     },
@@ -272,22 +280,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 124
         },
-        "outputId": "882bb3a0-2066-4d20-b8bb-91101d7fc765"
+        "outputId": "a786649f-0f95-4cb8-dfca-ba113120593d"
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print(b.data, 'Current Block Hash: {}'.format(calc_hashx(b.data)), 'Prev Hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 91,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Block1 Current Block Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev Hash: None\n",
-            "Block2 Current Block Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103\n",
-            "Block3 Current Block Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n"
+            "Block67 Current Block Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3 Prev Hash: None\n",
+            "Block1 Current Block Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3\n",
+            "Block2 Current Block Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n",
+            "Block3 Current Block Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704\n",
+            "Block4 Current Block Hash: ca174e0d60e2740ce87f5d4b303104edbaa26eae3792f2dc9711e2ea527d6b3c Prev Hash: ca174e0d60e2740ce87f5d4b303104edbaa26eae3792f2dc9711e2ea527d6b3c\n"
           ],
           "name": "stdout"
         }
@@ -296,12 +306,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JiIAYSyThiPd",
+        "id": "ZXl8a91RoTeL",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "ab = bc.pop()"
+        "bc.insert('Block67', 1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -309,97 +319,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pxn7p_wFlTiv",
+        "id": "dOxY76ejoXuI",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0edbfcff-a349-4f94-8a68-6fd20d9c3556"
+        "outputId": "fd59cc27-6adc-4fa1-ff0b-be178f38164e"
       },
       "source": [
-        "ab.data, ab.previous_hash"
+        "bc.head.data"
       ],
-      "execution_count": 92,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('Block4', 'f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704')"
+              "'Block67'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 134
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w6yeHoOhhoV-",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c99c504f-4336-4a84-c176-772d0feb41e3"
-      },
-      "source": [
-        "bc.blocks[0].previous_hash"
-      ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_05xMqa_iB5H",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2654a548-2a65-462d-cd1d-a6af81e002e8"
-      },
-      "source": [
-        "'40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103'== '40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103'"
-      ],
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 50
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LGjwgoAmji7v",
+        "id": "v_3eFdC_qOmr",
         "colab_type": "code",
         "colab": {}
       },
