--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtHceNUhi72DR0LherU+n/",
+      "authorship_tag": "ABX9TyO0Pva8Z1ISgrIxu249yYPq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,11 +64,16 @@
       },
       "source": [
         "class Block:\n",
-        "    def __init__(self, timestamp, data, previous_hash, current_hash):\n",
+        "    def __init__(self, timestamp, data, previous_hash):\n",
         "      self.timestamp = timestamp\n",
         "      self.data = data\n",
         "      self.previous_hash = previous_hash\n",
-        "      self.hash = current_hash"
+        "      self.hash = self.calc_hash()\n",
+        "\n",
+        "    def calc_hash(self):\n",
+        "      sha = hashlib.sha256()\n",
+        "      sha.update(self.data.encode('utf-8'))\n",
+        "      return sha.hexdigest()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -86,15 +91,9 @@
         "    self.blocks = []\n",
         "    self.head = None\n",
         "    \n",
-        "  def calc_hash(self, data):\n",
-        "    sha = hashlib.sha256()\n",
-        "    sha.update(data.encode('utf-8'))\n",
-        "    return sha.hexdigest()\n",
-        "\n",
         "  def prepend(self, data):\n",
         "    # Create a new block\n",
-        "    data_hash = self.calc_hash(data)\n",
-        "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
+        "    new_block = Block(time.gmtime(), data, None)\n",
         "    self.blocks.insert(0, new_block)\n",
         "\n",
         "    if self.head is None:\n",
@@ -108,17 +107,15 @@
         "\n",
         "  def append(self, data):\n",
         "    # Create a new block\n",
-        "    data_hash = self.calc_hash(data)\n",
-        "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
+        "    new_block = Block(time.gmtime(), data, None)\n",
         "    self.blocks.append(new_block)\n",
         "\n",
         "    if self.head is None:\n",
-        "      # If no head, that would mean no tail, assign both to new block and return\n",
         "      self.head = new_block\n",
         "      return\n",
         "\n",
-        "    # Assign the hash from the tail to the new blocks previous hash, move the tail to the new block\n",
-        "    new_block.previous_hash = self.calc_hash(self.blocks[-1].data)\n",
+        "    # Assign the hash from the end to the new blocks previous hash, move the tail to the new block\n",
+        "    new_block.previous_hash = self.blocks[-1].hash\n",
         "\n",
         "  def search(self, data):\n",
         "    # Run through the list to find the block object\n",
@@ -143,28 +140,26 @@
         "\n",
         "      # Find the block before and after it and link them\n",
         "      \n",
-        "      current_block_hash = self.calc_hash(block.data)\n",
         "      prev_block = None\n",
         "      next_block = None\n",
         "      \n",
         "      # For the block before, travel through the list, \n",
         "      # check block's previous hash against hash of the data in the block in the list\n",
         "      for b in self.blocks:\n",
-        "        if block.previous_hash == self.calc_hash(b.data):\n",
+        "        if block.previous_hash == b.hash:\n",
         "          prev_block = b\n",
         "          break\n",
         "      \n",
         "      # For the block after, travel through the list,\n",
         "      # check hash of current block's data against the previous hash of the block in the list\n",
         "      for b in self.blocks:\n",
-        "        if b.previous_hash == current_block_hash:\n",
+        "        if b.previous_hash == block.hash:\n",
         "          next_block = b\n",
         "          break\n",
         "      \n",
         "      if next_block and prev_block:\n",
-        "        print('Here')\n",
         "        # Block to be deleted in the middle\n",
-        "        next_block.previous_hash = self.calc_hash(prev_block.data)\n",
+        "        next_block.previous_hash = prev_block.hash\n",
         "      elif next_block:\n",
         "        # Block to be deleted is in the begining\n",
         "        next_block.previous_hash = None\n",
@@ -206,8 +201,7 @@
         "      return\n",
         "\n",
         "    # Create a new block\n",
-        "    data_hash = self.calc_hash(data)\n",
-        "    new_block = Block(time.gmtime(), data, None, data_hash)\n",
+        "    new_block = Block(time.gmtime(), data, None)\n",
         "\n",
         "    # Get the block from the list for that position and the previous one\n",
         "    next_block = self.blocks[pos-1]\n",
@@ -215,146 +209,13 @@
         "\n",
         "    # assign the has correctly\n",
         "    new_block.previous_hash = next_block.previous_hash\n",
-        "    next_block.previous_hash = data_hash\n",
+        "    next_block.previous_hash = new_block.hash\n",
         "    \n",
         "    # insert new block into the list\n",
         "    self.blocks.insert(pos-1, new_block)\n",
         "\n",
         "  def size(self):\n",
         "    return len(self.blocks)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "--EOl7mSa4Os",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "bc = BlockChain()\n",
-        "bc.append('Block1')\n",
-        "bc.append('Block2')\n",
-        "bc.append('Block3')\n",
-        "bc.append('Block4')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zvGT7HIfiyjh",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "af6af976-9878-4295-cec2-abbaddc70da9"
-      },
-      "source": [
-        "bc.size()"
-      ],
-      "execution_count": 131,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 131
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "smt-pd_TbRxs",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 124
-        },
-        "outputId": "a786649f-0f95-4cb8-dfca-ba113120593d"
-      },
-      "source": [
-        "for b in bc.blocks:\n",
-        "  print(b.data, 'Current Block Hash: {}'.format(calc_hashx(b.data)), 'Prev Hash: {}'.format(b.previous_hash))"
-      ],
-      "execution_count": 135,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Block67 Current Block Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3 Prev Hash: None\n",
-            "Block1 Current Block Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3\n",
-            "Block2 Current Block Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n",
-            "Block3 Current Block Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704\n",
-            "Block4 Current Block Hash: ca174e0d60e2740ce87f5d4b303104edbaa26eae3792f2dc9711e2ea527d6b3c Prev Hash: ca174e0d60e2740ce87f5d4b303104edbaa26eae3792f2dc9711e2ea527d6b3c\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZXl8a91RoTeL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "bc.insert('Block67', 1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dOxY76ejoXuI",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "fd59cc27-6adc-4fa1-ff0b-be178f38164e"
-      },
-      "source": [
-        "bc.head.data"
-      ],
-      "execution_count": 134,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Block67'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 134
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v_3eFdC_qOmr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
