--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0Pva8Z1ISgrIxu249yYPq",
+      "authorship_tag": "ABX9TyO2wkFjSTGvgt+WzzN9ivmH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,22 +35,6 @@
         "import hashlib\n",
         "from time import gmtime, strftime\n",
         "import time"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VeLGz6kxjETy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def calc_hashx(data):\n",
-        "    sha = hashlib.sha256()\n",
-        "    sha.update(data.encode('utf-8'))\n",
-        "    return sha.hexdigest()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -108,14 +92,16 @@
         "  def append(self, data):\n",
         "    # Create a new block\n",
         "    new_block = Block(time.gmtime(), data, None)\n",
+        "\n",
+        "    if self.size()>0:\n",
+        "      # Assign the hash from the end to the new blocks previous hash\n",
+        "      new_block.previous_hash = self.blocks[-1].hash\n",
+        "\n",
         "    self.blocks.append(new_block)\n",
         "\n",
         "    if self.head is None:\n",
         "      self.head = new_block\n",
         "      return\n",
-        "\n",
-        "    # Assign the hash from the end to the new blocks previous hash, move the tail to the new block\n",
-        "    new_block.previous_hash = self.blocks[-1].hash\n",
         "\n",
         "  def search(self, data):\n",
         "    # Run through the list to find the block object\n",
@@ -216,6 +202,311 @@
         "\n",
         "  def size(self):\n",
         "    return len(self.blocks)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jl31XJkgvHmn",
+        "colab_type": "text"
+      },
+      "source": [
+        "TEST CODE BELOW"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w9wjx-ZvsmFs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bc = BlockChain()\n",
+        "bc.append('Block1')\n",
+        "bc.append('Block2')\n",
+        "bc.append('Block3')\n",
+        "bc.append('Block5')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MJi1Ddn1susE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "75ccda80-5eaf-423e-fe51-8f95dea7c15c"
+      },
+      "source": [
+        "bc.size()"
+      ],
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 194
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ulH8tHoQswLf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "f308cbdd-1001-448f-f155-0ce394675522"
+      },
+      "source": [
+        "for b in bc.blocks:\n",
+        "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
+      ],
+      "execution_count": 195,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data: Block1 Curr Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev hash: None\n",
+            "Data: Block2 Curr Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103\n",
+            "Data: Block3 Curr Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n",
+            "Data: Block5 Curr Hash: 543ef0b11f17bef0e05f7335930915b763e0c227e58455b6d2c9759698ef686a Prev hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BVD-w22wtAhM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bc.prepend('PBlock6')\n",
+        "bc.prepend('PBlock7')\n",
+        "bc.prepend('PBlock8')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p5nBx_gPuHRs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "outputId": "b5c011d7-6d18-43ed-daea-f423ec2f4c70"
+      },
+      "source": [
+        "for b in bc.blocks:\n",
+        "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
+      ],
+      "execution_count": 197,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data: PBlock8 Curr Hash: 426aca398b0c462b95ad8833fc75b44273038ced80fadb330a868110448b96f2 Prev hash: None\n",
+            "Data: PBlock7 Curr Hash: 229fa73566ee3d5e9ab73718c12c88bd388d7cd33de283e0d582c7ec5dbed106 Prev hash: 426aca398b0c462b95ad8833fc75b44273038ced80fadb330a868110448b96f2\n",
+            "Data: PBlock6 Curr Hash: d5fe465bb0fed6b682f14523c1f96790ff88a62805b51874afdf7264fcd258a2 Prev hash: 229fa73566ee3d5e9ab73718c12c88bd388d7cd33de283e0d582c7ec5dbed106\n",
+            "Data: Block1 Curr Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev hash: d5fe465bb0fed6b682f14523c1f96790ff88a62805b51874afdf7264fcd258a2\n",
+            "Data: Block2 Curr Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103\n",
+            "Data: Block3 Curr Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n",
+            "Data: Block5 Curr Hash: 543ef0b11f17bef0e05f7335930915b763e0c227e58455b6d2c9759698ef686a Prev hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uVn-WFgHuKKW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bc.insert('Block65', 3)\n",
+        "bc.insert('Block66', 3)\n",
+        "bc.insert('Block67', 3)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DNJsoB82uXCh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "dc5dab0f-139f-4ba2-df04-686d8bd89848"
+      },
+      "source": [
+        "for b in bc.blocks:\n",
+        "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
+      ],
+      "execution_count": 199,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data: PBlock8 Curr Hash: 426aca398b0c462b95ad8833fc75b44273038ced80fadb330a868110448b96f2 Prev hash: None\n",
+            "Data: PBlock7 Curr Hash: 229fa73566ee3d5e9ab73718c12c88bd388d7cd33de283e0d582c7ec5dbed106 Prev hash: 426aca398b0c462b95ad8833fc75b44273038ced80fadb330a868110448b96f2\n",
+            "Data: Block67 Curr Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3 Prev hash: 229fa73566ee3d5e9ab73718c12c88bd388d7cd33de283e0d582c7ec5dbed106\n",
+            "Data: Block66 Curr Hash: 82be552aee2a51fc9bc3227314844a9a89d0d4455846b8e84545c7ec013e2216 Prev hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3\n",
+            "Data: Block65 Curr Hash: 5581c0c73982976806aa457f542e48ba18886aaa9c60a8eb9b192a2757e6db01 Prev hash: 82be552aee2a51fc9bc3227314844a9a89d0d4455846b8e84545c7ec013e2216\n",
+            "Data: PBlock6 Curr Hash: d5fe465bb0fed6b682f14523c1f96790ff88a62805b51874afdf7264fcd258a2 Prev hash: 5581c0c73982976806aa457f542e48ba18886aaa9c60a8eb9b192a2757e6db01\n",
+            "Data: Block1 Curr Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev hash: d5fe465bb0fed6b682f14523c1f96790ff88a62805b51874afdf7264fcd258a2\n",
+            "Data: Block2 Curr Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103\n",
+            "Data: Block3 Curr Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n",
+            "Data: Block5 Curr Hash: 543ef0b11f17bef0e05f7335930915b763e0c227e58455b6d2c9759698ef686a Prev hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pzWWQU5WuZRr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bc.remove('PBlock8')\n",
+        "bc.remove('PBlock7')\n",
+        "bc.remove('PBlock6')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MUIPZJ9uuoEZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "outputId": "ec48f298-1ba3-4659-a023-65f86cce4a3d"
+      },
+      "source": [
+        "for b in bc.blocks:\n",
+        "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
+      ],
+      "execution_count": 201,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data: Block67 Curr Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3 Prev hash: None\n",
+            "Data: Block66 Curr Hash: 82be552aee2a51fc9bc3227314844a9a89d0d4455846b8e84545c7ec013e2216 Prev hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3\n",
+            "Data: Block65 Curr Hash: 5581c0c73982976806aa457f542e48ba18886aaa9c60a8eb9b192a2757e6db01 Prev hash: 82be552aee2a51fc9bc3227314844a9a89d0d4455846b8e84545c7ec013e2216\n",
+            "Data: Block1 Curr Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev hash: 5581c0c73982976806aa457f542e48ba18886aaa9c60a8eb9b192a2757e6db01\n",
+            "Data: Block2 Curr Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103\n",
+            "Data: Block3 Curr Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n",
+            "Data: Block5 Curr Hash: 543ef0b11f17bef0e05f7335930915b763e0c227e58455b6d2c9759698ef686a Prev hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "woNFnfaDuqJW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1127b6a6-fbd5-42a3-efb3-306f943fee5c"
+      },
+      "source": [
+        "ret_block = bc.pop()\n",
+        "ret_block.data"
+      ],
+      "execution_count": 202,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Block5'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 202
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PX0ldfJluvrV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "dcdfc403-4a68-408f-f9fd-750fbc3751f1"
+      },
+      "source": [
+        "for b in bc.blocks:\n",
+        "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
+      ],
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data: Block67 Curr Hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3 Prev hash: None\n",
+            "Data: Block66 Curr Hash: 82be552aee2a51fc9bc3227314844a9a89d0d4455846b8e84545c7ec013e2216 Prev hash: 721984ef2b862d17a1e9329e46f8eaa85a70de9e88c248872e5a259c6264dca3\n",
+            "Data: Block65 Curr Hash: 5581c0c73982976806aa457f542e48ba18886aaa9c60a8eb9b192a2757e6db01 Prev hash: 82be552aee2a51fc9bc3227314844a9a89d0d4455846b8e84545c7ec013e2216\n",
+            "Data: Block1 Curr Hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103 Prev hash: 5581c0c73982976806aa457f542e48ba18886aaa9c60a8eb9b192a2757e6db01\n",
+            "Data: Block2 Curr Hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380 Prev hash: 40e9b17a3391b5f461b2b96a2e5810a885f088346b901c65ebb5cf8cf7361103\n",
+            "Data: Block3 Curr Hash: f76000270122d79ba262f8298080d37b8645d471d3885999274deba5caa7f704 Prev hash: 61edd5d6b03c20f764aab3bc4291b162ff48958e316603d4c07548a37872e380\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sx7QnEuqu1AV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
